# practica

./: .gitignore  CMakeLists.txt  README.md
docs/: algorithm.md  architecture.md  classes.md  components.md  io_spec.md  sequence.md  storage_model.md
results/: experiments.db  results.csv  test_source.txt
scripts/: generate_report.py
src/: main.cpp
src/app/: cli_parser.cpp  cli_parser.h  experiment_runner.cpp  experiment_runner.h
src/archive/: archive_manager.cpp  archive_manager.h
src/checker/: password_checker.cpp  password_checker.h
src/engine/: brute_force_engine.cpp  brute_force_engine.h
src/generator/: charset.cpp  charset.h  password_generator.cpp  password_generator.h
src/gpu/: gpu_checker.cpp  gpu_checker.h  metal_kernel.h  metal_kernel.mm  zipcrypto_kernel.metal  zipcrypto_util.cpp  zipcrypto_util.h
src/stats/: stats_collector.cpp  stats_collector.h
src/storage/: results_storage.cpp  results_storage.h
test/: CMakeLists.txt  test_archive_manager.cpp  test_brute_force_engine.cpp  test_charset.cpp  test_password_checker.cpp  test_password_generator.cpp  test_results_storage.cpp
